--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,21 +4,23 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "suitespotauth"
-version = "0.1.0"
+version = "0.1.1"
 description = "Easy SuiteSpot authentication."
 authors = [{ name = "Yakir Havin", email = "y.havin@gmail.com" }]
-license = { file = "LICENSE" }
 readme = "README.md"
 keywords = ["authentication", "suitespot", "property", "management", "capex", "construction"]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: MIT License"
+    "License :: OSI Approved :: MIT License"
 ]
 dependencies = [
     "keyring",
     "requests"
 ]
 requires-python = ">=3.8"
+
+[project.urls]
+Repository = "https://github.com/yhavin/suitespotauth"
 
 [project.scripts]
 suitespotauth-configure = "suitespotauth.configure:main"
