--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "suitespotauth"
-version = "0.1.2"
+version = "0.2.0"
 description = "Easy SuiteSpot authentication."
 authors = [{ name = "Yakir Havin", email = "y.havin@gmail.com" }]
 readme = "README.md"
@@ -15,7 +15,9 @@ classifiers = [
 ]
 dependencies = [
     "keyring",
-    "requests"
+    "requests",
+    "boto3",
+    "botocore"
 ]
 requires-python = ">=3.8"
 
